# aSimpleProject

./: README.md
cpp/: CMakeLists.txt
cpp/include/: aSimpleProject
cpp/include/aSimpleProject_bits/: standard.hpp
cpp/src/: test.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/src/: aSimpleProject.cpp
